syntax = "proto3";

package gmx.neutral.query.api;
option go_package = "./api";

message GetGlpAssetsRequest {}

message GetGlpAssetsResponse {
    repeated GlpAsset assets = 1;
}

message GlpAsset {
    string symbol = 1; 
    string poolAmount = 2;
    string weight = 3;
    string usdgAmount = 4;
    string allocation = 5;
}

service GlpService
{
    rpc GetGlpAssets(GetGlpAssetsRequest) returns (GetGlpAssetsResponse) {};
}